Refactor config helper

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,7 +10,7 @@ gitolite {
   directory = "/apps/repo"
 }
 
-gitbucket {
+gitBucket {
   db {
     default {
       driver = "org.h2.Driver"
@@ -19,6 +19,7 @@ gitbucket {
       password = "sa"
     }
   }
+  keyTitle = "Origin Import"
 }
 
 # Connection Pool settings
