Add support for migrating users from gitolite to gitbucket

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,9 +2,9 @@ gitolite {
   db {
     default {
       driver = "com.mysql.jdbc.Driver"
-      url = "jdbc:mysql://origin.tsl.telus.com:3306/origin"
-      user = ""
-      password = ""
+      url = "jdbc:mysql://localhost:3306/origin"
+      user = "root"
+      password = "root"
     }
   }
   directory = "/apps/repo"
