Add method to insert into Label table

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,4 +16,12 @@ gitBucket {
     password = "sa"
   }
   keyTitle = "Origin Import"
+  labelColours = {
+    bug = "fc2929"
+    duplicate = "cccccc"
+    enhancement = "84b6eb"
+    invalid = "84b6eb"
+    question = "cc317c"
+    wontfix = "ffffff"
+  }
 }
